# LiveSampler

./: .gitignore  .gitmodules  CMakeLists.txt
src/: LiveSampler.h  Main.cpp  MainWindow.cpp  MainWindow.h  PitchShifter.cpp  PitchShifter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/debug/: Debug.cpp  Debug.h  DebugPanel.h
src/standalone/: DeviceManagerWindow.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  PluginWrapper.cpp  PluginWrapper.h
